去掉内部状态代码base64api,改用apache-coder