@@ -16,8 +16,6 @@ import javax.crypto.spec.SecretKeySpec;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.log4j.Logger;
 
-import sun.misc.BASE64Decoder;
-
 /**
  * java aes 128 ecb 模式
  * 
@@ -181,7 +179,7 @@ public class AESUtils {
               //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
             cipher.init(Cipher.DECRYPT_MODE, key);
             //8.将加密并编码后的内容解码成字节数组
-            byte [] byte_content= new BASE64Decoder().decodeBuffer(content);
+            byte [] byte_content= Base64.decodeBase64(content);
             /*
              * 解密
              */
